--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^5.0.1",
+    "leaflet": "^1.7.1",
     "script-loader": "^0.7.2",
     "style-loader": "^2.0.0",
-    "three.js": "^0.77.1"
+    "three": "^0.124.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
